5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4477/executions/1593_2043.log
== TEST (2019-03-31 23:06:51) 
-- CODE:
nA = int(input(""))
nB = int(input(""))
nC = int(input(""))
nC = int(input(""))

var1 = nA + nB + nC + nD / 4
print(round(var1, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    nB = int(input(""))
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:07:42) 
-- CODE:
nA = int(input(""))
nB = int(input(""))
nC = int(input(""))
nC = int(input(""))

print(round(nA + nB + nC + nD / 4, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    nB = int(input(""))
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:08:44) 
-- CODE:
nA = int(input(""))
nB = int(input(""))
nC = int(input(""))
nC = int(input(""))

var1 = nA + nB + nC + nD
var2 = va1/4
print(round(nA + nB + nC + nD / 4, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    nB = int(input(""))
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:08:57) 
-- CODE:
nA = int(input(""))
nB = int(input(""))
nC = int(input(""))
nD = int(input(""))

var1 = nA + nB + nC + nD
var2 = va1/4
print(round(nA + nB + nC + nD / 4, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    nB = int(input(""))
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:09:29) 
-- CODE:
nA = int(input(""))
nB = int(input(""))
nC = int(input(""))
nD = int(input(""))

var1 = nA + nB + nC + nD / 4
print(round(var1, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    nB = int(input(""))
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:11:01) 
-- CODE:
nA = int(input(""))
nB = int(input(""))
nC = int(input(""))
nD = int(input(""))

var1 = nA + nB + nC + nD / 4
print(round(var1, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    nB = int(input(""))
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 23:11:10) 
-- CODE:
nA = int(input(""))
nB = int(input(""))
nC = int(input(""))
nD = int(input(""))

var1 = nA + nB + nC + nD / 4
print(round(var1, 2))

-- EXECUTION TIME:
0.146396
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2043/main.py", line 2, in <module>
    nB = int(input(""))
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:11:23) 
-- CODE:
nA = int(input(""))
nB = int(input(""))
nC = int(input(""))
nD = int(input(""))

var1 = nA + nB + nC + nD
print(round(var1, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    nB = int(input(""))
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:11:35) 
-- CODE:
nA = int(input(""))
nB = int(input(""))
nC = int(input(""))
nD = int(input(""))

var1 = nA + nB + nC + nD / 4
print(round(var1, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    nB = int(input(""))
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:12:07) 
-- CODE:
nA = int(input(""))
nB = int(input(""))
nC = int(input(""))
nD = int(input(""))

var1 = nA + nB + nC + nD 
var2 = var1 / 4
print(round(var2, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    nB = int(input(""))
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 23:12:13) 
-- CODE:
nA = int(input(""))
nB = int(input(""))
nC = int(input(""))
nD = int(input(""))

var1 = nA + nB + nC + nD 
var2 = var1 / 4
print(round(var2, 2))

-- EXECUTION TIME:
0.140234
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2043/main.py", line 2, in <module>
    nB = int(input(""))
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:12:42) 
-- CODE:
nA = int(input(""))
nB = int(input(""))
nC = int(input(""))
nD = int(input(""))

var1 = (nA + nB + nC + nD) / 4 
print(round(var1, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    nB = int(input(""))
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:12:44) 
-- CODE:
nA = int(input(""))
nB = int(input(""))
nC = int(input(""))
nD = int(input(""))

var1 = (nA + nB + nC + nD) / 4 
print(round(var1, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    nB = int(input(""))
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 23:12:51) 
-- CODE:
nA = int(input(""))
nB = int(input(""))
nC = int(input(""))
nD = int(input(""))

var1 = (nA + nB + nC + nD) / 4 
print(round(var1, 2))

-- EXECUTION TIME:
0.156324
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2043/main.py", line 2, in <module>
    nB = int(input(""))
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:13:53) 
-- CODE:
nA = int(input(""))
nB = int(input(""))
nC = int(input(""))
nD = int(input(""))

var1 = (nA + (2 * nB) + (3 * nC) + (4 * nD) / 4 
print(round(var1, 2))

-- ERROR:
File "XXXX", line 7
    print(round(var1, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:14:02) 
-- CODE:
nA = int(input(""))
nB = int(input(""))
nC = int(input(""))
nD = int(input(""))

var1 = (nA + (2 * nB) + (3 * nC) + (4 * nD) / 4 
print(round(var1, 2))

-- ERROR:
File "XXXX", line 7
    print(round(var1, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:14:39) 
-- CODE:
nA = int(input(""))
nB = int(input(""))
nC = int(input(""))
nD = int(input(""))

var1 = ((1 * nA) + (2 * nB) + (3 * nC) + (4 * nD)) / 4 
print(round(var1, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    nB = int(input(""))
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 23:14:54) 
-- CODE:
nA = int(input(""))
nB = int(input(""))
nC = int(input(""))
nD = int(input(""))

var1 = ((1 * nA) + (2 * nB) + (3 * nC) + (4 * nD)) / 4 
print(round(var1, 2))

-- EXECUTION TIME:
0.204999
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2043/main.py", line 2, in <module>
    nB = int(input(""))
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:17:02) 
-- CODE:
nA = int(input(""))
nB = int(input(""))
nC = int(input(""))
nD = int(input(""))

var1 = ((1 * nA) + (2 * nB) + (3 * nC) + (4 * nD)) / (nA + nB + nC + nD) 
print(round(var1, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    nB = int(input(""))
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 23:17:13) 
-- CODE:
nA = int(input(""))
nB = int(input(""))
nC = int(input(""))
nD = int(input(""))

var1 = ((1 * nA) + (2 * nB) + (3 * nC) + (4 * nD)) / (nA + nB + nC + nD) 
print(round(var1, 2))

-- EXECUTION TIME:
0.167963
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2043/main.py", line 2, in <module>
    nB = int(input(""))
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:18:53) 
-- CODE:
A = int(input(""))
B = int(input(""))
C = int(input(""))
D = int(input(""))

var1 = ((A * 1) + (B * 2) + (C * 3) + (D * 4) / (A + B + C +D))
print(round(var1, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    B = int(input(""))
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:19:09) 
-- CODE:
A = int(input(""))
B = int(input(""))
C = int(input(""))
D = int(input(""))

var1 = ((A * 1) + (B * 2) + (C * 3) + (D * 4) / (A + B + C +D))
print(round(var1, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    B = int(input(""))
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:19:13) 
-- CODE:
A = int(input(""))
B = int(input(""))
C = int(input(""))
D = int(input(""))

var1 = ((A * 1) + (B * 2) + (C * 3) + (D * 4) / (A + B + C +D))
print(round(var1, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    B = int(input(""))
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 23:19:30) 
-- CODE:
A = int(input(""))
B = int(input(""))
C = int(input(""))
D = int(input(""))

var1 = ((A * 1) + (B * 2) + (C * 3) + (D * 4) / (A + B + C +D))
print(round(var1, 2))

-- EXECUTION TIME:
0.188224
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2043/main.py", line 2, in <module>
    B = int(input(""))
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:20:06) 
-- CODE:
A = int(input(""))
B = int(input(""))
C = int(input(""))
D = int(input(""))

var1 = (((A * 1) + (B * 2) + (C * 3) + (D * 4)) / ((A + B + C +D))
print(round(var1, 2))

-- ERROR:
File "XXXX", line 7
    print(round(var1, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 23:20:49) 
-- CODE:
A = int(input(""))
B = int(input(""))
C = int(input(""))
D = int(input(""))

var1 = (((A * 1) + (B * 2) + (C * 3) + (D * 4)) / (A + B + C +D))
print(round(var1, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    B = int(input(""))
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 23:20:57) 
-- CODE:
A = int(input(""))
B = int(input(""))
C = int(input(""))
D = int(input(""))

var1 = (((A * 1) + (B * 2) + (C * 3) + (D * 4)) / (A + B + C +D))
print(round(var1, 2))

-- EXECUTION TIME:
0.12688
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2043/main.py", line 2, in <module>
    B = int(input(""))
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 23:56:47) 
-- CODE:
A = int(input(""))
B = int(input(""))
C = int(input(""))
D = int(input(""))

var1 = (((A * 1) + (B * 2) + (C * 3) + (D * 4)) / (A + B + C +D))
print(round(var1 / 10, 2))

-- EXECUTION TIME:
0.156289
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2043/main.py", line 2, in <module>
    B = int(input(""))
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 23:56:48) 
-- CODE:
A = int(input(""))
B = int(input(""))
C = int(input(""))
D = int(input(""))

var1 = (((A * 1) + (B * 2) + (C * 3) + (D * 4)) / (A + B + C +D))
print(round(var1 / 10, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    B = int(input(""))
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 23:57:08) 
-- CODE:
A = int(input(""))
B = int(input(""))
C = int(input(""))
D = int(input(""))

var1 = ((A + (B * 2) + (C * 3) + (D * 4))
print(round(var1 / 10, 2))

-- EXECUTION TIME:
0.160015
-- ERROR:
  File "/home/codebench/codes/1593/2043/main.py", line 7
    print(round(var1 / 10, 2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 23:57:08) 
-- CODE:
A = int(input(""))
B = int(input(""))
C = int(input(""))
D = int(input(""))

var1 = ((A + (B * 2) + (C * 3) + (D * 4))
print(round(var1 / 10, 2))

-- ERROR:
File "XXXX", line 7
    print(round(var1 / 10, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 23:57:59) 
-- CODE:
a = int(input(""))
b = int(input(""))
c = int(input(""))
d = int(input(""))

var1 = a + 2*b + c*3 + d*4
print(round(var1 / 10, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = int(input(""))
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 23:58:01) 
-- CODE:
a = int(input(""))
b = int(input(""))
c = int(input(""))
d = int(input(""))

var1 = a + 2*b + c*3 + d*4
print(round(var1 / 10, 2))

-- EXECUTION TIME:
0.193186
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2043/main.py", line 2, in <module>
    b = int(input(""))
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 23:58:25) 
-- CODE:
a = float(input(""))
b = float(input(""))
c = float(input(""))
d = float(input(""))

var1 = a + 2*b + c*3 + d*4
print(round(var1 / 10, 2))

-- EXECUTION TIME:
0.176948
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:41:33) 
-- CODE:
# Entradas
n1 = float(input("Determine: "))
n2 = float(input("Determine: "))
n3 = float(input("Determine: "))
n4 = float(input("Determine: "))
# Variavel
p1 = n1
p2 = n2 * 2
p3 = n3 * 3
p4 = n4 * 4
# Média ponderada
m = ((p1 + p2 + p3 + p4) / 4)
# Saida
print(m)
-- OUTPUT:
20.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:43:14) 
-- CODE:
# Entradas
n1 = float(input("Determine: "))
n2 = float(input("Determine: "))
n3 = float(input("Determine: "))
n4 = float(input("Determine: "))
# Variavel
p1 = n1
p2 = n2 * 2
p3 = n3 * 3
p4 = n4 * 4
# Média ponderada
m = ((p1 + p2 + p3 + p4) / 10)
# Saida
print(round(m, 2)

-- ERROR:
File "XXXX", line 15
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:43:21) 
-- CODE:
# Entradas
n1 = float(input("Determine: "))
n2 = float(input("Determine: "))
n3 = float(input("Determine: "))
n4 = float(input("Determine: "))
# Variavel
p1 = n1
p2 = n2 * 2
p3 = n3 * 3
p4 = n4 * 4
# Média ponderada
m = ((p1 + p2 + p3 + p4) / 10)
# Saida
print(round(m, 2)
-- ERROR:
File "XXXX", line 15
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:43:41) 
-- CODE:
# Entradas
n1 = float(input("Determine: "))
n2 = float(input("Determine: "))
n3 = float(input("Determine: "))
n4 = float(input("Determine: "))
# Variavel
p1 = n1
p2 = n2 * 2
p3 = n3 * 3
p4 = n4 * 4
# Média ponderada
m = ((p1 + p2 + p3 + p4) / 10)
# Saida
print(round(m, 2)
-- ERROR:
File "XXXX", line 15
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 17:44:01) 
-- CODE:
# Entradas
n1 = float(input("Determine: "))
n2 = float(input("Determine: "))
n3 = float(input("Determine: "))
n4 = float(input("Determine: "))
# Variavel
p1 = n1
p2 = n2 * 2
p3 = n3 * 3
p4 = n4 * 4
# Média ponderada
m = ((p1 + p2 + p3 + p4) / 10)
# Saida
print(round(m, 2)
-- EXECUTION TIME:
0.160456
-- ERROR:
  File "/home/codebench/codes/1593/2043/main.py", line 15
    
                     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:44:02) 
-- CODE:
# Entradas
n1 = float(input("Determine: "))
n2 = float(input("Determine: "))
n3 = float(input("Determine: "))
n4 = float(input("Determine: "))
# Variavel
p1 = n1
p2 = n2 * 2
p3 = n3 * 3
p4 = n4 * 4
# Média ponderada
m = ((p1 + p2 + p3 + p4) / 10)
# Saida
print(round(m, 2)
-- ERROR:
File "XXXX", line 15
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:44:27) 
-- CODE:
# Entradas
n1 = float(input("Determine: "))
n2 = float(input("Determine: "))
n3 = float(input("Determine: "))
n4 = float(input("Determine: "))
# Variavel
p1 = n1 * 1
p2 = n2 * 2
p3 = n3 * 3
p4 = n4 * 4
# Média ponderada
m = ((p1 + p2 + p3 + p4) / 10)
# Saida
print(round(m, 2)
-- ERROR:
File "XXXX", line 15
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:44:39) 
-- CODE:
# Entradas
n1 = float(input("Determine: "))
n2 = float(input("Determine: "))
n3 = float(input("Determine: "))
n4 = float(input("Determine: "))
# Variavel
p1 = n1 * 1
p2 = n2 * 2
p3 = n3 * 3
p4 = n4 * 4
# Média ponderada
m = ((p1 + p2 + p3 + p4) / 10)
# Saida
print(round(m, 2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 17:44:50) 
-- CODE:
# Entradas
n1 = float(input("Determine: "))
n2 = float(input("Determine: "))
n3 = float(input("Determine: "))
n4 = float(input("Determine: "))
# Variavel
p1 = n1 * 1
p2 = n2 * 2
p3 = n3 * 3
p4 = n4 * 4
# Média ponderada
m = ((p1 + p2 + p3 + p4) / 10)
# Saida
print(round(m, 2))
-- EXECUTION TIME:
0.20063
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
